Trad: start french traduction

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
       <!-- Le div ui pourrait contenir tout ce qui concerne l'ui de l'app -->
       <div id="ui">
-        <p class="note">Appuie/Clique pour te déplacer !</p>
+        <p class="note">Appuie/Clique pour bouger !</p>
         <div id="textbox-container" style="display: none">
           <div id="textbox">
             <p id="dialogue" class="ui-text"></p>
