--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <body>
     <style>
       @font-face {
-        font-family: monogram;
-        src: url(monogram.ttf);
+        font-family: gamer;
+        src: url(gamer.ttf);
       }
 
       body {
-        font-family: monogram, monospace;
+        font-family: gamer, monospace;
         font-size: 2rem;
         overflow: hidden;
       }
@@ -50,7 +50,7 @@
       }
 
       .ui-close-btn {
-        font-family: monogram, monospace;
+        font-family: gamer, monospace;
         border-style: none;
         border-radius: 3px;
         padding: 1rem;
