--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <div id="textbox">
             <p id="dialogue" class="ui-text"></p>
             <div class="btn-container">
-              <button id="close" class="ui-close-btn">Close</button>
+              <button id="close" class="ui-close-btn">Fermer</button>
             </div>
           </div>
 
